adds png fallback for brave-logo-lion.webp on initial load

--- a/public/creators-landing/public/index.html
+++ b/public/creators-landing/public/index.html
@@ -30,7 +30,11 @@
     </noscript>
     <div id="root">
       <div class="full-page-loader">
-        <img width="80" src="./brave-logo-lion.webp" alt="Brave" />
+        <picture>
+          <source srcset="./brave-logo-lion.webp" type="image/webp" />
+          <source srcset="./brave-logo-lion.png" type="image/png" />
+          <img width="80" src="./brave-logo-lion.png" alt="Brave" />
+        </picture>
       </div>
     </div>
 
