Replaces "rewards" with "creators" where applicable

--- a/public/creators-landing/public/index.html
+++ b/public/creators-landing/public/index.html
@@ -17,7 +17,7 @@
     />
     <meta
       property="og:description"
-      content="Viewers who use the Brave Browser may have contributed money to you while surfing the web through Brave Rewards. Simply sign up as a verified content creator on Brave Rewards to start collecting your contributions."
+      content="Viewers who use the Brave Browser may have contributed money to you while surfing the web through Brave Creators. Simply sign up as a verified content creator on Brave Creators to start collecting your contributions."
     />
     <meta property="og:image" content="%PUBLIC_URL%/preview.png" />
     <meta property="og:type" content="website" />
