Hardcode meta tags for now, until GH action fixed

--- a/public/creators-landing/public/index.html
+++ b/public/creators-landing/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="https://creators.brave.com/favicon.ico" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="https://creators.brave.com/manifest.json" />
     <title>
       Earn more for content you publish to the web - Brave Creators
     </title>
@@ -19,7 +19,7 @@
       property="og:description"
       content="Viewers who use the Brave Browser may have contributed money to you while surfing the web through Brave Creators. Simply sign up as a verified content creator on Brave Creators to start collecting your contributions."
     />
-    <meta property="og:image" content="%PUBLIC_URL%/preview.png" />
+    <meta property="og:image" content="https://creators.brave.com/preview.png" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://creators.brave.com" />
   </head>
